# edge-set-attention

./: .gitignore  Makefile  inference.py  main.py  pyproject.toml  train.py
esa/: chemprop_featurization.py  config.py  data_loading.py  dataset.py  metrics.py  model.py  modules.py  posenc.py  trainer.py  transforms.py  utils.py
utils/posenc_encoders/: kernel_pos_encoder.py  laplace_pos_encoder.py
