[project]
name = "edge-set-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "rdkit>=2025.3.3",
    "ruff>=0.12.4",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchmetrics>=1.8.0",
    "yacs>=0.1.8",
]
